<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.greatmancode</groupId>
    <artifactId>legendarybot</artifactId>
    <packaging>pom</packaging>
    <version>2.0-SNAPSHOT</version>
    <inceptionYear>2017</inceptionYear>
    <organization>
        <name>Greatmancode</name>
    </organization>
    <modules>
        <module>api</module>
        <module>server</module>
        <module>ilvlcommand</module>
        <module>invasioncommand</module>
        <module>servercommand</module>
        <module>owrankcommand</module>
        <module>affixcommand</module>
        <module>logcommand</module>
        <module>tokencommand</module>
        <module>customcommands</module>
        <module>legendarycheck</module>
        <module>music</module>
        <module>blizzardcscommand</module>
        <module>streamers</module>
        <module>botstats</module>
        <module>botplay</module>
        <module>botgeneral</module>
        <module>gifcommand</module>
        <module>wprank</module>
        <module>lookupCommands</module>
        <module>mythicplusrank</module>
        <module>raidrank</module>
        <module>legionbuilding</module>
        <module>wowlink</module>
    </modules>

    <properties>
        <pf4j.version>1.4.0-SNAPSHOT</pf4j.version>
        <pf4j-update.version>0.4.0</pf4j-update.version>
        <jda.version>3.3.1_286</jda.version>
        <jsonsimple.version>1.1.1</jsonsimple.version>
        <jodatime.version>2.9.7</jodatime.version>
        <slf4jsimple.version>1.7.25</slf4jsimple.version>
    </properties>

    <repositories>
        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>http://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>ro.fortsoft.pf4j</groupId>
            <artifactId>pf4j</artifactId>
            <version>${pf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ro.fortsoft.pf4j</groupId>
            <artifactId>pf4j-update</artifactId>
            <version>${pf4j-update.version}</version>
        </dependency>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${jsonsimple.version}</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${jodatime.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jsimple.version}</version>
        </dependency>
        <dependency>
            <groupId>com.sedmelluq</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>1.2.43</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.6</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>2.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.elasticsearch.client</groupId>
            <artifactId>rest</artifactId>
            <version>5.5.1</version>
        </dependency>
        <dependency>
            <groupId>com.datadoghq</groupId>
            <artifactId>java-dogstatsd-client</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.10.3</version>
        </dependency>
        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-core</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.scribejava</groupId>
            <artifactId>scribejava-core</artifactId>
            <version>4.2.0</version>
        </dependency>
    </dependencies>
<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.9</source>
                <target>1.9</target>
            </configuration>
        </plugin>
        <plugin>
            <groupId>com.mycila</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <version>3.0</version>
            <executions>
                <execution>
                    <phase>clean</phase>
                    <goals>
                        <goal>format</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <quiet>false</quiet>
                <encoding>UTF-8</encoding>
                <strictCheck>true</strictCheck>
                <header>HEADER.txt</header>
                <keywords>
                    <keyword>${project.name}</keyword>
                    <keyword>license</keyword>
                </keywords>
                <mapping>
                    <java>SLASHSTAR_STYLE</java>
                </mapping>
                <properties>
                    <name>${project.name}</name>
                    <url>${project.organization.url}</url>
                    <copyright>Copyright (c) ${project.inceptionYear}-2017, ${project.organization.name}</copyright>
                </properties>
                <includes>
                    <include>src/main/java/**</include>
                    <include>src/test/java/**</include>
                </includes>
            </configuration>
        </plugin>
    </plugins>
</build>

</project>